[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["JoshuaKhanOfficial <joshuajk007@gmail.com>"]
description = ""
name = "lonewolveswebsite"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
flask-jwt = "^0.3.2"
flask-sqlalchemy = "^2.4"
python = "^3.7"
sqlalchemy = "^1.3"
werkzeug = "^1.0"
flask-login = "^0.5.0"
flask-wtf = "^0.14.3"
wtforms = "^2.3"
email-validator = "^1.1"
[tool.poetry.dev-dependencies]
